--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/taha-abbasi/web-server/issues"
   },
-  "homepage": "https://github.com/taha-abbasi/web-server#readme"
+  "homepage": "https://github.com/taha-abbasi/web-server#readme",
+  "dependencies": {
+    "express": "^4.13.2"
+  }
 }
